--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,62 +16,101 @@
                 <button type="submit" class="btn btn-info">Add Task</button>
             </div>
         </form>
-        
-        <ul class="list-group mt-3">
-            {{#if tasks.length}}
-                {{#each tasks}}
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <span>{{this.task}}</span>
 
+        <h3 class="mt-4">To-Do</h3>
+        <ul class="list-group mt-3">
+            {{#if notDoneTasks.length}}
+                {{#each notDoneTasks}}
+                    <li class="list-group-item d-flex justify-content-between align-items-center {{#if status}}done{{/if}}">
                         <div>
-                            <button type="button" class="btn btn-warning btn-sm me-2"
-                            data-bs-toggle="modal" data-bs-target="#updateModal-{{this._id}}">
-                                Update
-                            </button>
+                            <form action="/toggle-task-status" method="POST" style="display:inline;">
+                                <input type="hidden" name="taskId" value="{{_id}}">
+                                <input type="checkbox" onchange="this.form.submit()" {{#if status}}checked{{/if}}>
+                            </form>
+                            <span class="ms-2">{{task}}</span>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-warning btn-sm me-2" data-bs-toggle="modal" data-bs-target="#updateModal-{{_id}}">Update</button>
                             <form action="/delete-task" method="POST" style="display:inline;">
-                                <input type="hidden" name="taskId" value="{{this._id}}">
+                                <input type="hidden" name="taskId" value="{{_id}}">
                                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                             </form>
                         </div>
-
                     </li>
 
-                    <div class="modal fade" id="updateModal-{{this._id}}" tabindex="-1" aria-labelledby="updateModalLabel-{{this._id}}" aria-hidden="true">
-                        
+                    <div class="modal fade" id="updateModal-{{_id}}" tabindex="-1" aria-labelledby="updateModalLabel-{{_id}}" aria-hidden="true">
                         <div class="modal-dialog">
-                            
                             <div class="modal-content">
-
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="updateModalLabel-{{this._id}}">Update Task</h5>
+                                    <h5 class="modal-title" id="updateModalLabel-{{_id}}">Update Task</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
-
                                 <div class="modal-body">
-
                                     <form action="/update-task" method="POST">
-                                        <input type="hidden" name="taskId" value="{{this._id}}">
+                                        <input type="hidden" name="taskId" value="{{_id}}">
                                         <div class="mb-3">
-                                            <label for="task-{{this._id}}" class="form-label">Task</label>
-                                            <input type="text" class="form-control" id="task-{{this._id}}" name="task" value="{{this.task}}" required>
+                                            <label for="task-{{_id}}" class="form-label">Task</label>
+                                            <input type="text" class="form-control" id="task-{{_id}}" name="task" value="{{task}}" required>
                                         </div>
                                         <button type="submit" class="btn btn-primary">Save Changes</button>
                                     </form>
-
                                 </div>
-
                             </div>
-                        
                         </div>
-
                     </div>
                 {{/each}}
-
             {{else}}
-                <li class="list-group-item">No tasks yet!</li>
+                <li class="list-group-item">No tasks to do!</li>
             {{/if}}
         </ul>
-        
+
+        <h3 class="mt-4">Done</h3>
+        <ul class="list-group mt-3">
+            {{#if doneTasks.length}}
+                {{#each doneTasks}}
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <div>
+                            <form action="/toggle-task-status" method="POST" style="display:inline;">
+                                <input type="hidden" name="taskId" value="{{_id}}">
+                                <input type="checkbox" onchange="this.form.submit()" {{#if status}}checked{{/if}}>
+                            </form>
+                            <span class="ms-2">{{task}}</span>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-warning btn-sm me-2" data-bs-toggle="modal" data-bs-target="#updateModal-{{_id}}">Update</button>
+                            <form action="/delete-task" method="POST" style="display:inline;">
+                                <input type="hidden" name="taskId" value="{{_id}}">
+                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                            </form>
+                        </div>
+                    </li>
+
+                    <div class="modal fade" id="updateModal-{{_id}}" tabindex="-1" aria-labelledby="updateModalLabel-{{_id}}" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="updateModalLabel-{{_id}}">Update Task</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form action="/update-task" method="POST">
+                                        <input type="hidden" name="taskId" value="{{_id}}">
+                                        <div class="mb-3">
+                                            <label for="task-{{_id}}" class="form-label">Task</label>
+                                            <input type="text" class="form-control" id="task-{{_id}}" name="task" value="{{task}}" required>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {{/each}}
+            {{else}}
+                <li class="list-group-item">No tasks done yet!</li>
+            {{/if}}
+        </ul>
+
         <form action="/logout" method="POST" class="mt-3">
             <button type="submit" class="btn btn-danger w-100">Logout</button>
         </form>
